feat: encapsulate Command